--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     ]
   },
   "devDependencies": {
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "react-router-dom": "^5.0.0"
   }
 }
