--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "Chihiro_react",
   "version": "0.1.0",
+  "homepage": "/Chihiro_react",
   "private": true,
   "dependencies": {
     "react": "^16.8.6",
@@ -12,7 +13,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -31,6 +34,7 @@
   },
   "devDependencies": {
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
+    "gh-pages": "^2.0.1",
     "react-router-dom": "^5.0.0"
   }
 }
