--- a/package.json
+++ b/package.json
@@ -86,7 +86,10 @@
   "devDependencies": {
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "gh-pages": "^2.0.1",
-    "react-router-dom": "^5.0.0"
+    "node-sass": "^4.12.0",
+    "react-router-dom": "^5.0.0",
+    "sass-loader": "^7.1.0",
+    "sass-resources-loader": "^2.0.1"
   },
   "jest": {
     "collectCoverageFrom": [
