--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-dev-utils": "^9.0.1",
     "react-dom": "^16.8.6",
     "react-router": "^5.0.0",
+    "react-virtualized": "^9.21.1",
     "resolve": "1.10.0",
     "sass-loader": "7.1.0",
     "semver": "6.0.0",
